--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="refresh" content="15; url=https://docs.google.com/forms/d/e/1FAIpQLSe_t7zKiaKCW5KHI0BQq7o7xcVqY3UdYE0Y8zcwP35xeEBaQ/viewform?usp=sf_link">
-  <title>Thank you!</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      margin-top: 100px;
-    }
-  </style>
-</head>
-<body>
-  <h2>Thank you for signing in!</h2>
-  <p>You’ll be redirected back to the form shortly...</p>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="15; url=https://docs.google.com/forms/d/e/1FAIpQLSe_t7zKiaKCW5KHI0BQq7o7xcVqY3UdYE0Y8zcwP35xeEBaQ/viewform">
+    <title>Thank you!</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        text-align: center;
+        margin-top: 100px;
+      }
+    </style>
+  </head>
+  <body>
+    <h2>Thank you for signing in!</h2>
+    <p>You’ll be redirected back to the form in a few seconds...</p>
+  </body>
 </html>
