--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="15; url=https://docs.google.com/forms/d/e/1FAIpQLSe_t7zKiaKCW5KHI0BQq7o7xcVqY3UdYE0Y8zcwP35xeEBaQ/viewform">
+    <meta http-equiv="refresh" content="15; url=https://docs.google.com/forms/d/e/1FAIpQLSe_t7zKiaKcW5KHIlOB0q7o7xcVqYJuDYEOV8zcwP35xeEBaQ/viewform?usp=header">
     <title>Thank you!</title>
     <style>
       body {
@@ -13,6 +13,6 @@
   </head>
   <body>
     <h2>Thank you for signing in!</h2>
-    <p>You’ll be redirected back to the form in a few seconds...</p>
+    <p>You’ll be redirected back to the form shortly...</p>
   </body>
 </html>
