--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
         margin: 0;
         padding: 0;
         height: 100%;
-        background: #ffffff;
+        width: 100%;
         overflow: hidden;
+        background-color: #ffffff;
       }
       iframe {
         border: none;
-        width: 110vw;           /* Slight oversize to fill screen */
-        height: 110vh;          /* Pushes unwanted footer out of view */
-        transform: scale(1.1);  /* Zoom in slightly */
+        position: absolute;
+        top: -50px;
+        left: -10px;
+        width: 120vw;
+        height: 120vh;
+        transform: scale(1.2);
         transform-origin: top left;
       }
     </style>
