--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         height: 100%;
         width: 100%;
         overflow: hidden;
-        background-color: #ffffff;
+        background-color: #673ab7; /* Deep purple */
       }
       iframe {
         border: none;
         position: absolute;
-        top: -50px;
-        left: -10px;
-        width: 120vw;
-        height: 120vh;
-        transform: scale(1.2);
+        top: -80px;
+        left: -20px;
+        width: 130vw;
+        height: 130vh;
+        transform: scale(1.35);
         transform-origin: top left;
       }
     </style>
@@ -29,3 +29,4 @@
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_t7zKiaKcW5KHIlOB0q7o7xcVqYJuDYEOV8zcwP35xeEBaQ/viewform?embedded=true"></iframe>
   </body>
 </html>
+
