--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
         padding: 0;
         height: 100%;
         width: 100%;
-        overflow: hidden;
         background-color: #673ab7; /* Deep purple */
+        overflow: hidden;
       }
       iframe {
         border: none;
         position: absolute;
-        top: -80px;
-        left: -20px;
-        width: 130vw;
-        height: 130vh;
-        transform: scale(1.35);
-        transform-origin: top left;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
       }
     </style>
   </head>
@@ -29,4 +27,5 @@
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_t7zKiaKcW5KHIlOB0q7o7xcVqYJuDYEOV8zcwP35xeEBaQ/viewform?embedded=true"></iframe>
   </body>
 </html>
+
 
