--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
         padding: 0;
         width: 100%;
         height: 100%;
-        background-color: #673ab7; /* Deep purple */
+        background-color: #673ab7; /* Purple background */
         overflow: hidden;
         display: flex;
         justify-content: center;
-        align-items: flex-start; /* top-aligns form */
+        align-items: flex-start;
       }
 
       iframe {
-        width: 105vw;  /* slightly oversized to hide grey borders */
-        height: 110vh; /* pushes Google footer offscreen */
-        transform: scale(1.25);
+        width: 95vw;
+        height: 110vh;
+        transform: scale(1.15);
         transform-origin: top center;
         border: none;
       }
@@ -32,6 +32,7 @@
     ></iframe>
   </body>
 </html>
+
 
 
 
