--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       }
 
       iframe {
-        width: 95vw;
-        height: 110vh;
-        transform: scale(1.15);
+        width: 93vw;                /* slightly narrower to allow border */
+        height: 130vh;              /* taller to push bottom off-screen */
+        transform: scale(1.1);      /* slightly reduced zoom */
         transform-origin: top center;
         border: none;
       }
@@ -32,6 +32,7 @@
     ></iframe>
   </body>
 </html>
+
 
 
 
