--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         padding: 0;
         width: 100%;
         height: 100%;
-        background-color: #673ab7; /* Purple background */
+        background-color: #673ab7;
         overflow: hidden;
         display: flex;
         justify-content: center;
@@ -18,10 +18,11 @@
       }
 
       iframe {
-        width: 93vw;                /* slightly narrower to allow border */
-        height: 130vh;              /* taller to push bottom off-screen */
-        transform: scale(1.1);      /* slightly reduced zoom */
+        width: 93vw;
+        height: 130vh;
+        transform: scale(1.1);
         transform-origin: top center;
+        margin-top: -40px; /* shift form upward to crop bottom */
         border: none;
       }
     </style>
@@ -32,7 +33,6 @@
     ></iframe>
   </body>
 </html>
-
 
 
 
