--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
       iframe {
         width: 93vw;
-        height: 200vh;
+        height: 115vh;               /* give room for dropdowns */
         transform: scale(1.1);
         transform-origin: top center;
-        margin-top: 120px; /* shift form upward to crop bottom */
+        margin-top: 20px;
         border: none;
       }
     </style>
@@ -33,6 +33,7 @@
     ></iframe>
   </body>
 </html>
+
 
 
 
