--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     }
 
     .iframe-container {
-      transform: scale(0.90);
+      transform: scale(0.87);
       transform-origin: top center;
+      margin-top: 30px;
       width: 100%;
       height: 100%;
     }
@@ -35,6 +36,7 @@
   </div>
 </body>
 </html>
+
 
 
 
