--- a/index.html
+++ b/index.html
@@ -8,23 +8,21 @@
       padding: 0;
       background-color: #3b0a50;
       overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
+      width: 100vw;
       height: 100vh;
     }
 
     .iframe-container {
-      transform: scale(0.87);
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%) scale(0.94);
       transform-origin: top center;
-      margin-top: 30px;
-      width: 100%;
-      height: 100%;
     }
 
     iframe {
       width: 1000px;
-      height: 1500px;
+      height: 1550px;
       border: none;
     }
   </style>
@@ -36,6 +34,8 @@
   </div>
 </body>
 </html>
+
+
 
 
 
