--- a/IFSA_Staff_Widget_AutoRefresh.html
+++ b/IFSA_Staff_Widget_AutoRefresh.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="30">
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-      iframe {
-        border: none;
-        width: 100vw;
-        height: 100vh;
-      }
-    </style>
-  </head>
-  <body>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTdFJlzrYV96A_22JY-FMVd2XDcIlco6wN_zc8aANcCvQBHSMSt6s0tApw6f8BkpXe5tGldHWYnTmUn/pubhtml?gid=1838450354&single=true&widget=true&headers=false"></iframe>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>IFSA Staff Onsite</title>
+  <meta http-equiv="refresh" content="30">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: white;
+    }
+    iframe {
+      width: 100vw;
+      height: 100vh;
+      border: none;
+    }
+  </style>
+</head>
+<body>
+  <iframe 
+    src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTdFJlzrYV96A_22JY-FMVd2XDcIlco6wN_zc8aANcCvQBHSMSt6s0tApw6f8BkpXe5tGldHWYnTmUn/pubhtml?gid=1838450354&single=true&range=A1:A50&widget=false&headers=false" 
+    allowfullscreen>
+  </iframe>
+</body>
 </html>
+
