--- a/staff-widget.html
+++ b/staff-widget.html
@@ -5,16 +5,15 @@
   <title>IFSA Staff Onsite</title>
   <style>
     html, body {
+      height: 100%;
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
       background-color: white;
-      height: 100vh;
+      overflow: auto !important;
     }
 
     #container {
-      height: 100vh;
-      overflow-y: auto;
       padding: 20px;
       box-sizing: border-box;
     }
@@ -36,9 +35,9 @@
     }
 
     #debug {
-      margin-top: 20px;
       font-size: 14px;
       color: grey;
+      margin-top: 20px;
     }
   </style>
 </head>
@@ -87,6 +86,7 @@
   </script>
 </body>
 </html>
+
 
 
 
