--- a/staff-widget.html
+++ b/staff-widget.html
@@ -5,15 +5,23 @@
   <title>IFSA Staff Onsite</title>
   <style>
     html, body {
-      height: 100%;
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
       background-color: white;
+      height: 100vh;
+      max-height: 100vh;
       overflow: auto !important;
     }
 
+    body {
+      display: flex;
+      flex-direction: column;
+    }
+
     #container {
+      flex: 1;
+      overflow-y: auto;
       padding: 20px;
       box-sizing: border-box;
     }
@@ -86,6 +94,7 @@
   </script>
 </body>
 </html>
+
 
 
 
